force-app/main/default/objects/Account/fields/Latest_STA_Filed__c.field-meta.xml
<CustomField>
    <fullName>Latest_STA_Filed__c</fullName>
    <inlineHelpText>Last STA Updated - auto-filled from FCC Filings via a process.</inlineHelpText>
    <label>Latest STA Updated</label>
    <length>64</length>
    <type>Text</type>
</CustomField>