force-app/main/default/objects/Account/fields/Latest_STA_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_STA_Status__c</fullName>
    <inlineHelpText>Status of the last STA Update.</inlineHelpText>
    <label>Latest STA Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>