force-app/main/default/objects/Account/fields/Latest_STA_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_STA_Status_Date__c</fullName>
    <inlineHelpText>Date of the last STA Status.  Auto-Filled from the last filing.</inlineHelpText>
    <label>Latest STA Status Date</label>
    <type>Date</type>
</CustomField>