force-app/main/default/objects/Account/fields/Lease_Other_Parties_ID__c.field-meta.xml
<CustomField>
    <fullName>Lease_Other_Parties_ID__c</fullName>
    <label>Lease Other Parties ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>