force-app/main/default/objects/Account/fields/Lease_Other_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Other_Party_Type__c</fullName>
    <label>Lease Other Party Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>