force-app/main/default/objects/Account/fields/Letterstream_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Letterstream_Tracking_Number__c</fullName>
    <inlineHelpText>Tracking number populated from Letterstream when mailed.</inlineHelpText>
    <label>Letterstream Tracking Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>