force-app/main/default/objects/Account/fields/License_to_Cover_Filing_Number__c.field-meta.xml
<CustomField>
    <fullName>License_to_Cover_Filing_Number__c</fullName>
    <inlineHelpText>Holds the file number for the latest License to Cover to support the link to the FCC Contour</inlineHelpText>
    <label>License to Cover Filing Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>