force-app/main/default/objects/Account/fields/License_to_Cover_Status__c.field-meta.xml
<CustomField>
    <fullName>License_to_Cover_Status__c</fullName>
    <inlineHelpText>Updates based on FCC filings</inlineHelpText>
    <label>License to Cover Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>