force-app/main/default/objects/Account/fields/License_to_Cover_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>License_to_Cover_Status_Date__c</fullName>
    <inlineHelpText>updates based on fcc filing</inlineHelpText>
    <label>License to Cover Status Date</label>
    <type>Date</type>
</CustomField>