force-app/main/default/objects/Account/fields/Licensee_Address_Last_Line_CASS__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Address_Last_Line_CASS__c</fullName>
    <inlineHelpText>Licensee address, City, State and Zip from LMS corrected via CASS verification process.</inlineHelpText>
    <label>Licensee Address Last Line CASS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>