force-app/main/default/objects/Account/fields/Licensee_Alternative_Name__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Alternative_Name__c</fullName>
    <inlineHelpText>Alternative to Licensee Name in LMS.  Make changes to this field only.</inlineHelpText>
    <label>Licensee Alternative Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>