force-app/main/default/objects/Account/fields/Licensee_Bad_Address__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Bad_Address__c</fullName>
    <inlineHelpText>LMS Address status after processing by CASS address verification system.  Code indicates either no error or the type of error found.</inlineHelpText>
    <label>Licensee Bad Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>