force-app/main/default/objects/Account/fields/Licensee_City__c.field-meta.xml
<CustomField>
    <fullName>Licensee_City__c</fullName>
    <label>Licensee City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>