force-app/main/default/objects/Account/fields/Licensee_Email__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Email__c</fullName>
    <label>Licensee Email</label>
    <type>Email</type>
</CustomField>