force-app/main/default/objects/Account/fields/Licensee_Name__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Name__c</fullName>
    <inlineHelpText>This information is updated daily from LMS.  Make changes to the Licensee Name Alternative only.</inlineHelpText>
    <label>Licensee Name</label>
    <length>140</length>
    <type>Text</type>
</CustomField>