force-app/main/default/objects/Account/fields/Licensee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Phone__c</fullName>
    <label>Licensee Phone</label>
    <type>Phone</type>
</CustomField>