force-app/main/default/objects/Account/fields/Licensee_State__c.field-meta.xml
<CustomField>
    <fullName>Licensee_State__c</fullName>
    <label>Licensee State</label>
    <length>32</length>
    <type>Text</type>
</CustomField>