force-app/main/default/objects/Account/fields/Licensee_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Street_2__c</fullName>
    <label>Licensee Street 2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>