force-app/main/default/objects/Account/fields/Licensee_Street__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Street__c</fullName>
    <label>Licensee Street</label>
    <length>128</length>
    <type>Text</type>
</CustomField>