force-app/main/default/objects/Account/fields/Licensee_Street_CASS__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Street_CASS__c</fullName>
    <inlineHelpText>Licensee address from LMS corrected via CASS verification process.</inlineHelpText>
    <label>Licensee Street CASS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>