force-app/main/default/objects/Account/fields/Licensee_Zip__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Zip__c</fullName>
    <label>Licensee Zip</label>
    <length>32</length>
    <type>Text</type>
</CustomField>