force-app/main/default/objects/Account/fields/List_Ordered__c.field-meta.xml
<CustomField>
    <fullName>List_Ordered__c</fullName>
    <inlineHelpText>Date the latest Site List was ordered.</inlineHelpText>
    <label>List Ordered</label>
    <type>DateTime</type>
</CustomField>