force-app/main/default/objects/Account/fields/List_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>List_Sent_On__c</fullName>
    <inlineHelpText>Date the latest site list was sent to the market.  Populated when the TaskRay Task completed.</inlineHelpText>
    <label>List Sent On</label>
    <type>DateTime</type>
</CustomField>