force-app/main/default/objects/Account/fields/LMS_Antenna_Latitude__c.field-meta.xml
<CustomField>
    <fullName>LMS_Antenna_Latitude__c</fullName>
    <inlineHelpText>Decimal Conversion fields for NAD83</inlineHelpText>
    <label>LMS Antenna Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>