force-app/main/default/objects/Account/fields/LMS_Antenna_Longitude__c.field-meta.xml
<CustomField>
    <fullName>LMS_Antenna_Longitude__c</fullName>
    <inlineHelpText>Decimal conversion field for NAD83</inlineHelpText>
    <label>LMS Antenna Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>