force-app/main/default/objects/Account/fields/LMS_Contact_City__c.field-meta.xml
<CustomField>
    <fullName>LMS_Contact_City__c</fullName>
    <label>LMS Contact City</label>
    <length>32</length>
    <type>Text</type>
</CustomField>