force-app/main/default/objects/Account/fields/LMS_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>LMS_Contact_Email__c</fullName>
    <label>LMS Contact Email</label>
    <type>Email</type>
</CustomField>