force-app/main/default/objects/Account/fields/LMS_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>LMS_Contact_Name__c</fullName>
    <label>LMS Contact Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>