force-app/main/default/objects/Account/fields/LMS_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>LMS_Contact_Phone__c</fullName>
    <label>LMS Contact Phone</label>
    <type>Phone</type>
</CustomField>