force-app/main/default/objects/Account/fields/LMS_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>LMS_Contact_State__c</fullName>
    <label>LMS Contact State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>