force-app/main/default/objects/Account/fields/LMS_Contact_Street_2__c.field-meta.xml
<CustomField>
    <fullName>LMS_Contact_Street_2__c</fullName>
    <label>LMS Contact Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>