force-app/main/default/objects/Account/fields/LMS_Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>LMS_Contact_Street__c</fullName>
    <label>LMS Contact Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>