force-app/main/default/objects/Account/fields/LMS_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>LMS_Contact_Title__c</fullName>
    <label>LMS Contact Title</label>
    <length>64</length>
    <type>Text</type>
</CustomField>