force-app/main/default/objects/Account/fields/LMS_Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>LMS_Contact_Zip__c</fullName>
    <label>LMS Contact Zip</label>
    <length>16</length>
    <type>Text</type>
</CustomField>