force-app/main/default/objects/Account/fields/LMS_Link__c.field-meta.xml
<CustomField>
    <fullName>LMS_Link__c</fullName>
    <formula>HYPERLINK(
&quot;http://enterpriseefiling.fcc.gov/dataentry/public/tv/publicFacilityDetails.html?facilityId=&quot; + Name,
&quot;FCC LMS&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LMS Link</label>
    <type>Text</type>
</CustomField>