force-app/main/default/objects/Account/fields/LMS_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_Refresh_Date__c</fullName>
    <inlineHelpText>Latest updates received from LMS data</inlineHelpText>
    <label>LMS Refresh Date</label>
    <type>Date</type>
</CustomField>