force-app/main/default/objects/Account/fields/Long_DRT__c.field-meta.xml
<CustomField>
    <fullName>Long_DRT__c</fullName>
    <inlineHelpText>DRT Monitoring</inlineHelpText>
    <label>Long DRT</label>
    <type>TextArea</type>
</CustomField>