force-app/main/default/objects/Account/fields/Long_Number__c.field-meta.xml
<CustomField>
    <fullName>Long_Number__c</fullName>
    <label>Long Number</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>