force-app/main/default/objects/Account/fields/LPTV_Notification_ID__c.field-meta.xml
<CustomField>
    <fullName>LPTV_Notification_ID__c</fullName>
    <inlineHelpText>Salesforce ID of the LPTV Notification.  Populated when an LPTV is creates.  Used to add FCC Filings to a related list on Notifications.</inlineHelpText>
    <label>LPTV Notification ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>