force-app/main/default/objects/Account/fields/Mailing_Name__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Name__c</fullName>
    <label>Mailing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>