force-app/main/default/objects/Account/fields/Main_Antenna_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Main_Antenna_Ordered__c</fullName>
    <inlineHelpText>The Station has placed orders for the following equipment, if required:1. Main Facility Antenna</inlineHelpText>
    <label>Main Antenna Ordered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>