force-app/main/default/objects/Account/fields/Mask_Filter_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Mask_Filter_Ordered__c</fullName>
    <inlineHelpText>The Station has placed orders for the following equipment, if required:Main Facility Mask Filter and/or RF Combiner</inlineHelpText>
    <label>Mask Filter Ordered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>