force-app/main/default/objects/Account/fields/May_2018_Displacement__c.field-meta.xml
<CustomField>
    <fullName>May_2018_Displacement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to track reminder email sent may 16th 2018</inlineHelpText>
    <label>May 2018 Displacement</label>
    <type>Checkbox</type>
</CustomField>