force-app/main/default/objects/Account/fields/Mex_Station_Off_Air_Support__c.field-meta.xml
<CustomField>
    <fullName>Mex_Station_Off_Air_Support__c</fullName>
    <label>Mex Station Off Air Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Probe Data</fullName>
            </value>
            <value>
                <fullName>Drive Testing</fullName>
            </value>
            <value>
                <fullName>IFT</fullName>
            </value>
            <value>
                <fullName>Rabbit Ears</fullName>
            </value>
            <value>
                <fullName>Wikipedia</fullName>
            </value>
            <value>
                <fullName>Other see notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>