force-app/main/default/objects/Account/fields/Mex_Stations_Off_Air_Reason__c.field-meta.xml
<CustomField>
    <fullName>Mex_Stations_Off_Air_Reason__c</fullName>
    <formula>IF(INCLUDES( Mex_Station_Off_Air_Support__c, &quot;Probe Data&quot;), &quot;Probe Data&quot;, Null)  &amp; &quot;;&quot; &amp; 
IF(INCLUDES( Mex_Station_Off_Air_Support__c , &quot;Drive Testing&quot;), &quot;Drive Testing&quot;, NULL)  &amp; &quot;;&quot; &amp; 
IF(INCLUDES( Mex_Station_Off_Air_Support__c , &quot;IFT&quot;), &quot;IFT&quot;, NULL)  &amp; &quot;;&quot; &amp; 
IF(INCLUDES( Mex_Station_Off_Air_Support__c , &quot;Rabbit Ears&quot;), &quot;Rabbit Ears&quot;, NULL)  &amp; &quot;;&quot; &amp; 
IF(INCLUDES( Mex_Station_Off_Air_Support__c , &quot;Wikipedia&quot;), &quot;Wikipedia&quot;, NULL)  &amp; &quot;;&quot; &amp; 
IF(INCLUDES( Mex_Station_Off_Air_Support__c , &quot;Other see notes&quot;), &quot;Other see notes&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mex Stations Off Air Reason</label>
    <type>Text</type>
</CustomField>