force-app/main/default/objects/Account/fields/Mexico__c.field-meta.xml
<CustomField>
    <fullName>Mexico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mexico</label>
    <type>Checkbox</type>
</CustomField>