force-app/main/default/objects/Account/fields/More_than_5_MHz_Separation__c.field-meta.xml
<CustomField>
    <fullName>More_than_5_MHz_Separation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This station has been identified as having more than 5MHz seperation from any POR sites.</inlineHelpText>
    <label>More than 5 MHz Separation</label>
    <type>Checkbox</type>
</CustomField>