force-app/main/default/objects/Account/fields/MX_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>MX_Group_Number__c</fullName>
    <inlineHelpText>MX Group information for MX Issues (Settlement Window information).</inlineHelpText>
    <label>MX Group Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>