force-app/main/default/objects/Account/fields/NAD83_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>NAD83_Coordinates__c</fullName>
    <inlineHelpText>Latitude/Longitude of the Antenna</inlineHelpText>
    <label>NAD83 Coordinates</label>
    <length>64</length>
    <type>Text</type>
</CustomField>