force-app/main/default/objects/Account/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>Company Name, Vendor Name, General Contractor Name</inlineHelpText>
    <label>Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>