force-app/main/default/objects/Account/fields/NDA_Sent_to_Station__c.field-meta.xml
<CustomField>
    <fullName>NDA_Sent_to_Station__c</fullName>
    <label>NDA Sent to Station</label>
    <type>Date</type>
</CustomField>