force-app/main/default/objects/Account/fields/NDA_Signed_by_Station__c.field-meta.xml
<CustomField>
    <fullName>NDA_Signed_by_Station__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Signed by Station</label>
    <type>Checkbox</type>
</CustomField>