force-app/main/default/objects/Account/fields/NDA_Signed_by_T_Mobile__c.field-meta.xml
<CustomField>
    <fullName>NDA_Signed_by_T_Mobile__c</fullName>
    <label>NDA Signed by T-Mobile</label>
    <type>DateTime</type>
</CustomField>