force-app/main/default/objects/Account/fields/Network_Affliliation__c.field-meta.xml
<CustomField>
    <fullName>Network_Affliliation__c</fullName>
    <label>Network Affliliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>