force-app/main/default/objects/Account/fields/New_Channel__c.field-meta.xml
<CustomField>
    <fullName>New_Channel__c</fullName>
    <inlineHelpText>Target final channel for the station.</inlineHelpText>
    <label>New Channel</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>