force-app/main/default/objects/Account/fields/Nielsen_DMA__c.field-meta.xml
<CustomField>
    <fullName>Nielsen_DMA__c</fullName>
    <description>DMA (Designated Market Area) regions are the geographic areas in the United States in which local television viewing is measured by The Nielsen Company. The DMA data are essential for any marketer, researcher, or organization seeking to utilize standardized geographic areas within their business.</description>
    <label>Nielsen DMA</label>
    <length>64</length>
    <type>Text</type>
</CustomField>