force-app/main/default/objects/Account/fields/No_Further_Monitoring_Needed__c.field-meta.xml
<CustomField>
    <fullName>No_Further_Monitoring_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Further Monitoring Needed</label>
    <type>Checkbox</type>
</CustomField>