force-app/main/default/objects/Account/fields/Non_Displaced_Stations__c.field-meta.xml
<CustomField>
    <fullName>Non_Displaced_Stations__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PBS Stations that do not require a repack project.</inlineHelpText>
    <label>PBS Non-Displaced Stations</label>
    <type>Checkbox</type>
</CustomField>