force-app/main/default/objects/Account/fields/Non_Standard_Notification__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PBS field that helps track stations with non standard notifications</inlineHelpText>
    <label>Non-Standard Notification</label>
    <type>Checkbox</type>
</CustomField>