force-app/main/default/objects/Account/fields/Notification_STA_Status__c.field-meta.xml
<CustomField>
    <fullName>Notification_STA_Status__c</fullName>
    <inlineHelpText>First STA Status after commencement date and then locked once &quot;Granted&quot;. Auto-filled from FCC Filings via a process.</inlineHelpText>
    <label>Notification STA Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>