force-app/main/default/objects/Account/fields/Notification_STA_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_STA_Status_Date__c</fullName>
    <inlineHelpText>First STA Status Date after commencement date. This is locked once &quot;Granted&quot; is received from the FCC. Field is auto-filled from FCC Filings via a process.</inlineHelpText>
    <label>Notification STA Status Date</label>
    <type>Date</type>
</CustomField>