force-app/main/default/objects/Account/fields/Order_Site_Delay_List__c.field-meta.xml
<CustomField>
    <fullName>Order_Site_Delay_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make sure the Station Change - Estimated Date (DELAY) has been updated to reflect the date the analysis should be run on.  This kicks off a request to analyze the impact of the delay.</inlineHelpText>
    <label>Order Site Delay List (Update Date)</label>
    <type>Checkbox</type>
</CustomField>