force-app/main/default/objects/Account/fields/Order_Site_List__c.field-meta.xml
<CustomField>
    <fullName>Order_Site_List__c</fullName>
    <inlineHelpText>Update the Station Change date and save the record before selecting.</inlineHelpText>
    <label>Order Site List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Acceleration</fullName>
            </value>
            <value>
                <fullName>Delay(little or no 5/10 impact)</fullName>
                <label>Delay (little or no 5/10 impact)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>