force-app/main/default/objects/Account/fields/Other_Issues_Addressed__c.field-meta.xml
<CustomField>
    <fullName>Other_Issues_Addressed__c</fullName>
    <description>Maps to field “unaddressed_issues_explanation”</description>
    <inlineHelpText>Does the Station have other issues that must be addressed before it can fully construct and/or operate its post-auction facility?</inlineHelpText>
    <label>Other Issues Addressed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>