force-app/main/default/objects/Account/fields/Other_Tower_Contractor_Comment__c.field-meta.xml
<CustomField>
    <fullName>Other_Tower_Contractor_Comment__c</fullName>
    <inlineHelpText>Please type in the name of the contractor the broadcaster is using (If it is NOT in the drop down menu above).</inlineHelpText>
    <label>Other Tower Contractor (Enter Name)</label>
    <type>TextArea</type>
</CustomField>