force-app/main/default/objects/Account/fields/Path_1_Frequencies__c.field-meta.xml
<CustomField>
    <fullName>Path_1_Frequencies__c</fullName>
    <inlineHelpText>All frequency ranges as included in LMS</inlineHelpText>
    <label>Path 1 Frequencies</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>