force-app/main/default/objects/Account/fields/PBS_Agreement__c.field-meta.xml
<CustomField>
    <fullName>PBS_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PBS Agreement</label>
    <type>Checkbox</type>
</CustomField>