force-app/main/default/objects/Account/fields/PBS_Comments__c.field-meta.xml
<CustomField>
    <fullName>PBS_Comments__c</fullName>
    <inlineHelpText>Field populated by PBS users with updates regarding Utah Translators or PBS stations to assist with tracking stations</inlineHelpText>
    <label>PBS Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>