force-app/main/default/objects/Account/fields/PEA_2__c.field-meta.xml
<CustomField>
    <fullName>PEA_2__c</fullName>
    <label>PEA 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>