force-app/main/default/objects/Account/fields/PEA_3__c.field-meta.xml
<CustomField>
    <fullName>PEA_3__c</fullName>
    <label>PEA 3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>