force-app/main/default/objects/Account/fields/PEA__c.field-meta.xml
<CustomField>
    <fullName>PEA__c</fullName>
    <label>PEA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>