force-app/main/default/objects/Account/fields/PEAs_pre_repack__c.field-meta.xml
<CustomField>
    <fullName>PEAs_pre_repack__c</fullName>
    <inlineHelpText>These are the PEAs for the location of the translator, prior to the repack.</inlineHelpText>
    <label>PEAs (pre-repack)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>