force-app/main/default/objects/Account/fields/Phase_Change_Approved__c.field-meta.xml
<CustomField>
    <fullName>Phase_Change_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the station has a Repack Phase change approved by the FCC.</inlineHelpText>
    <label>Phase Change Approved</label>
    <type>Checkbox</type>
</CustomField>