force-app/main/default/objects/Account/fields/Phase_Change_Requested__c.field-meta.xml
<CustomField>
    <fullName>Phase_Change_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the Station has filed an STA to change Repack Phases</inlineHelpText>
    <label>Phase Change Requested</label>
    <type>Checkbox</type>
</CustomField>