force-app/main/default/objects/Account/fields/Phase_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_Completion_Date__c</fullName>
    <inlineHelpText>Date the FCC has set for the station to be off air on its old channel based on the phase the station is assigned to.</inlineHelpText>
    <label>Phase Completion Date</label>
    <type>Date</type>
</CustomField>