force-app/main/default/objects/Account/fields/Phase_Completion_Date_original__c.field-meta.xml
<CustomField>
    <fullName>Phase_Completion_Date_original__c</fullName>
    <inlineHelpText>Phase Completion Date initially assigned to the station.  Used to keep Broadcaster deals showing accurate months early calculation once phase change has occurred.</inlineHelpText>
    <label>Phase Completion Date(original)</label>
    <type>Date</type>
</CustomField>