force-app/main/default/objects/Account/fields/Phase_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_Date__c</fullName>
    <inlineHelpText>Date the FCC has set for the start of the phase the station is assigned to.</inlineHelpText>
    <label>Phase Start Date</label>
    <type>Date</type>
</CustomField>