force-app/main/default/objects/Account/fields/Phase_Delays_Power_Changes__c.field-meta.xml
<CustomField>
    <fullName>Phase_Delays_Power_Changes__c</fullName>
    <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015f4000001pro4&quot;, &quot;Process Flow for Station Changes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to pdf showing the Process Flow for Station Changes</inlineHelpText>
    <label>Phase Delays &amp; Power Changes</label>
    <type>Text</type>
</CustomField>