force-app/main/default/objects/Account/fields/Phase_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_End_Date__c</fullName>
    <inlineHelpText>Phase and Phase End Date</inlineHelpText>
    <label>Phase/Date</label>
    <length>32</length>
    <type>Text</type>
</CustomField>