force-app/main/default/objects/Account/fields/Phase_Testing_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_Testing_Date__c</fullName>
    <inlineHelpText>Date the FCC has set for the start of the phase testing the stations is assigned to.</inlineHelpText>
    <label>Phase Testing Date</label>
    <type>Date</type>
</CustomField>