force-app/main/default/objects/Account/fields/Phase_Transition_Comments_Updated_Hidde__c.field-meta.xml
<CustomField>
    <fullName>Phase_Transition_Comments_Updated_Hidde__c</fullName>
    <formula>DATEVALUE( Enter_Phase_Transition_Updates__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hidden field to help calculate when phase transition updates were last modified.</inlineHelpText>
    <label>Phase Transition Comments Updated (Hidde</label>
    <type>Date</type>
</CustomField>