force-app/main/default/objects/Account/fields/Phase_Transition_Flow_Info__c.field-meta.xml
<CustomField>
    <fullName>Phase_Transition_Flow_Info__c</fullName>
    <formula>Call_Sign_Current__c  + &quot;  &quot;  +  Account_City__c  + &quot;,  &quot;  +  Account_State__c  + &quot;  -Transition Reports Show Risk &quot;  +  IF(Transition_Reports_Shows_Risk__c  = True, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to supply information for the transition update flow.</inlineHelpText>
    <label>Phase Transition Flow Info</label>
    <type>Text</type>
</CustomField>