force-app/main/default/objects/Account/fields/Phase_Transition_Update_1__c.field-meta.xml
<CustomField>
    <fullName>Phase_Transition_Update_1__c</fullName>
    <label>Phase Transition Update Latest</label>
    <type>TextArea</type>
</CustomField>