force-app/main/default/objects/Account/fields/Phase_Transition_Update_2__c.field-meta.xml
<CustomField>
    <fullName>Phase_Transition_Update_2__c</fullName>
    <label>Phase Transition Update Prior</label>
    <type>TextArea</type>
</CustomField>