force-app/main/default/objects/Account/fields/Phase_Transition_Update_3__c.field-meta.xml
<CustomField>
    <fullName>Phase_Transition_Update_3__c</fullName>
    <label>Phase Transition Update #3</label>
    <type>TextArea</type>
</CustomField>