force-app/main/default/objects/Account/fields/Phase_Transition_Update_3_Long__c.field-meta.xml
<CustomField>
    <fullName>Phase_Transition_Update_3_Long__c</fullName>
    <label>New_Phase Transition Update #3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>