force-app/main/default/objects/Account/fields/Phase_Transition_Update_Latest_long__c.field-meta.xml
<CustomField>
    <fullName>Phase_Transition_Update_Latest_long__c</fullName>
    <label>New_Phase Transition Update Latest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>