force-app/main/default/objects/Account/fields/Phase_Transition_Updates_All__c.field-meta.xml
<CustomField>
    <fullName>Phase_Transition_Updates_All__c</fullName>
    <label>Phase Transition Updates All</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>